# soapybrain

./: .clang-format  .gitignore  BuildProject.sh  CMakeLists.txt  Makefile  Makefile.inc  Note.org  OpenGLExamples.files  README  TODO.org  chapterone.c  chapterone.cc  chapterthree.cc  charset.h  chptfour.1.c  chptthree.1.c  chptthree.2.c  chpttwo.4.c  chpttwo.c  compilefile.sh  cube5.cpp  cube6.cpp  cube6b.cpp  gl.out  light.c  modelrender.c  obj7.cpp  obj_loader.h  opengl.files  opengl.includes  planets.c  planets.cc  triangle.c  triangle2.c  triangle3.c  triangle4.cpp
common/: Makefile  shader_utils.c  shader_utils.h
opengl-programing-guide/: Actor.h  CMakeLists.txt  Entity.h  Makefile  Model.h  Render.h  TODO  TODO.org  ex15_1.cpp  ex_oculus.cpp  exj_1.cpp  exj_2.cpp  exj_3.cpp  exj_4.cpp  exj_5.cpp  exj_x.h.in  glm_tests.cpp  oculus.cpp  oculus_scafolding.cpp  triangles.cpp
opengl-programing-guide/common/: Actor.cpp  Actor.h  CMakeLists.txt  Camera.h  Display.cpp  Display.h  Entity.cpp  Entity.h  Makefile  Model.h  Model_vbotorus.cpp  Model_vbotorus.h  Render.cpp  Render.h  Shader.cpp  Shader.h  shader_utils.c  shader_utils.cpp  shader_utils.h
opengl-programing-guide/shaders/: default.vert  diffuse_shading.frag  diffuse_shading.vert  ex15_1.f.glsl  ex15_1.v.glsl  exj_3_1.v.glsl  exj_4_1.f.glsl  exj_4_1.v.glsl  oculus.v.glsl  triangles.f.glsl  triangles.v.glsl
opengl-programming-guide/: CMakeLists.txt  Camera.h  Display.h  Entity.h  Makefile  Model.h  Render.h  TODO.org  ex_oculus.cpp  ex_texture_render.cpp  exj_2.cpp  exj_3.cpp  exj_4.cpp  exj_5.cpp
opengl-programming-guide/common/: CMakeLists.txt  Display.cpp  Display.h  Entity.cpp  Entity.h  Model.h  Render.cpp  Render.h  Shader.cpp  Shader.h
opengl-programming-guide/shaders/: ads_shading.vert  diffuse_shading.frag  diffuse_shading.vert  ex15_1.v.glsl  exj_3_1.v.glsl  exj_4_1.v.glsl  oculus.f.glsl  oculus.v.glsl  texture_render.f.glsl  texture_render.v.glsl  triangles.v.glsl
opengl-wikibook/: Makefile  cube5.cpp  cube6.cpp  cube6b.cpp  obj7.cpp  triangle.c  triangle2.c  triangle3.c  triangle4.cpp
opengl-wikibook/common/: Makefile  shader_utils.c  shader_utils.h
opengl-wikibook/shaders/: Makefile  cube5.f.glsl  cube6.f.glsl  cube6.v.glsl  triangle2.f.glsl  triangle4.v.glsl
openglbook/: Makefile  Utils.h  chptfour.1.c  chptone.c  chptthree.1.c  chpttwo.c  utils.c
pre3/: Makefile  chapternine.c  chapterone.c  modelrender.c  planets.c
shaders/: Makefile  ads_shading.vert  cube5.f.glsl  cube52.v.glsl  default.frag  default.vert  diffuse_shading.frag  diffuse_shading.vert  oculus.f.glsl  oculus.v.glsl  triangle.f.glsl  triangle.v.glsl  triangle4.f.glsl
soapybrain-examples/: .CMakeLists.txt.swp  CMakeLists.txt  ex_texture_render.cpp  exj_5.cpp
src/: Actor.h  Actor.hpp  CMakeLists.txt  Camera.h  Camera.hpp  Display.cpp  Display.hpp  Entity.cpp  Entity.h  Entity.hpp  Model.h  Model.hpp  Model_vbotorus.cpp  Model_vbotorus.hpp  Render.cpp  Render.hpp  RenderTarget.cpp  RenderTarget.hpp  Shader.cpp  Shader.hpp  shader_utils.cpp
tests/: Makefile  test1  test1.cpp
